# Page-Scraper

./: .gitignore  PageScrapper.spec  README.md  build_exe.bat  page_scrapper_launcher.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
scraper/: __init__.py  app.py  cli.py  clients.py  config.py  crawler.py  downloader.py  extractor.py  filters.py  manifest.py  models.py  reporting.py  runtime.py  storage.py
tests/: test_crawler_modes.py  test_extractor.py  test_filters.py  test_manifest.py  test_reporting.py
